tests/cases/compiler-development/artifact/errors/diagnostic-invalid-assignment.diagnostic
diagnostic error code=T0001 family=type message="cannot assign to immutable binding 'value'" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-invalid-assignment.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-invalid-assignment.ari" bytes=67
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-invalid-assignment.ari" line=3 column=3 end_line=3 end_column=8 byte_start=38 byte_end=43 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-invalid-assignment.ari:3:3\n   |\n 3 |   value = 2;\n   |   ^^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-invalid-assignment.ari" line=2 column=7 end_line=2 end_column=12 byte_start=25 byte_end=30 message="immutable binding 'value' was declared here"
  Snippet label=1 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-invalid-assignment.ari:2:7\n   |\n 2 |   let value = 1;\n   |       ^^^^^"
  Note index=0 location=none message="let bindings are immutable after initialization"
  Help index=0 location=none message="declare 'value' with var if it needs to be reassigned"
